--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "animate.css": "^3.7.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -20,6 +21,7 @@
     "css-loader": "^2.1.1",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.4.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "style-loader": "^0.23.1",
@@ -28,9 +30,15 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "echarts": "^4.2.1",
+    "element-ui": "^2.10.1",
+    "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
+    "vue-dynamic-dropdown": "^1.0.11",
     "vue-loader": "^13.3.0",
+    "vue-photo-preview": "^1.1.3",
     "vue-router": "^3.0.1",
+    "vue-select": "^3.1.0",
     "vue-template-compiler": "^2.5.2",
     "vuex": "^3.0.1"
   }
