--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "animate.css": "^3.7.2",
+    "axios": "^0.16.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -35,11 +36,13 @@
     "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
     "vue-dynamic-dropdown": "^1.0.11",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-loader": "^13.3.0",
     "vue-photo-preview": "^1.1.3",
     "vue-router": "^3.0.1",
     "vue-select": "^3.1.0",
     "vue-template-compiler": "^2.5.2",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "wangeditor": "^3.1.1"
   }
 }
